# Overmon

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt
main/source/: Main.cpp
main/source/Base/: Counter.hpp  Global.cpp  Global.hpp  Movable.cpp  Movable.hpp  Player.cpp  Player.hpp  Sprite.cpp  Sprite.hpp
main/source/Character/: DrawableNpc.cpp  DrawableNpc.hpp  DrawablePlayer.cpp  DrawablePlayer.hpp  MovableNpc.cpp  MovableNpc.hpp  Npc.cpp  Npc.hpp  Sprite.hpp  WalkingNpc.hpp
main/source/NPC/: Timely.hpp  Turning.cpp  Turning.hpp  Walking.cpp  Walking.hpp
main/source/Resource/: AreaManager.hpp  BaseAreaManager.hpp  BaseSpriteManager.hpp  DynamicArea.cpp  DynamicArea.hpp  DynamicAreaManager.cpp  DynamicAreaManager.hpp  DynamicSpriteManager.cpp  DynamicSpriteManager.hpp  RegionViewer.cpp  RegionViewer.hpp
main/source/Sprite/: DynamicSpriteManager.cpp  DynamicSpriteManager.hpp  SpriteManager.hpp
main/source/Util/: Counter.hpp  Debug.hpp  Navigator.cpp  Updatable.hpp
resources/: resources.toml
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/Overmon/Base/: Global.cpp  Global.hpp  Movable.cpp  Movable.hpp  Player.cpp  Player.hpp  Sprite.cpp  Sprite.hpp
source/core/Overmon/NPC/: Timely.cpp  Timely.hpp  Turning.cpp  Turning.hpp  Walking.cpp  Walking.hpp
source/core/Overmon/Resource/: DynamicArea.cpp  DynamicAreaManager.cpp  DynamicAreaManager.hpp  DynamicManager.hpp  DynamicSpriteManager.cpp  DynamicSpriteManager.hpp  RegionViewer.cpp  RegionViewer.hpp  SpriteManager.hpp
source/core/Overmon/Util/: Debug.hpp  Direction.hpp
source/core/cmake/: FindSFML.cmake
source/demo/: CMakeLists.txt  Main.cpp
source/explorer/: CMakeLists.txt  Main.cpp
source/explorer/Util/: Navigator.cpp  Navigator.hpp  NavigatorDisplay.cpp  NavigatorDisplay.hpp
source/main/: CMakeLists.txt  Main.cpp
source/main/Character/: DrawableNpc.cpp  DrawableNpc.hpp
source/main/Debug/: FPSCounter.cpp  FPSCounter.hpp
src/: Main.cpp
